--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  fbid: 
+  uid:
   name: 
   email: 
   host: 
@@ -11,7 +11,7 @@ one:
   why_in_sf: MyText
 
 two:
-  fbid: 
+  uid:
   name: 
   email: 
   host: 
